--- a/bb-theme-child/style.css
+++ b/bb-theme-child/style.css
@@ -3561,6 +3561,7 @@ p.event-title {
 }
 
 /*** pages sticky menu bar *****/
+/*** pages sticky menu bar *****/
 .pages-sticky-bar ul li{
     display: inline;
     padding-right: 40px;
