Updated child theme files and deployment config 2

--- a/bb-theme-child/style.css
+++ b/bb-theme-child/style.css
@@ -3562,6 +3562,7 @@ p.event-title {
 
 /*** pages sticky menu bar *****/
 /*** pages sticky menu bar *****/
+/*** pages sticky menu bar *****/
 .pages-sticky-bar ul li{
     display: inline;
     padding-right: 40px;
